--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- Video Background -->
     <video class="video-background" autoplay loop muted>
-        <source src="DNA Strand Background Graphic 1 Hour Loop.mp4" type="video/mp4">
+        <source src="dna.mov" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     
